--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,8 +36,7 @@
             width: 50px;
             height: 50px;
             border: 5px solid #e0e0e0;
-            border-top: 5px solid #2DDD7F;
-            border-radius: 50%;
+            border-top: 5px solid #FF6633
             animation: spin 1s linear infinite;
             margin: 0 auto;
         }
@@ -60,7 +59,7 @@
 
         .progress-bar {
             height: 100%;
-            background-color: #2DDD7F;
+            background-color: #FF6633;
             width: 0;
             transition: width 0.3s;
         }
